tests/snapshots/render_snapshots__100x30_chart.snap
---
source: tests/render_snapshots.rs
expression: "render_with_hourly_mode_to_string(100, 30, 61, HourlyViewMode::Chart)"
---
┌Current · L cities · S settings · ? help──────────────────────────────────────────────────────────┐
│ 7°C                                                                                              │
│ Slight rain                                                                                      │
│ H:9°  L:3°                                                                                       │
│ Stockholm, Stockholm, Sweden                                                                     │
│ Now action: keep precipitation gear ready                                                        │
│ Next change in 8h: Temperature rises to 9°C                                                      │
│ Next 6h: P 3.9mm · Pmax 35% · Gust 6 m/s · ΔT +3°C                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌▶ Hourly · Chart · Thu 12 Feb─────────────────────────────────────────────────────────────────────┐
│Now action: keep precipitation gear ready  |  Next change in 8h: Temperature rises to 9°C  |  ●...│
│Temp  ▁▁▁▁▁▁▁▁▁▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▃▃▃▃▃▃▃▃▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▆▆▆▆▆▆▆▆▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇█ │
│Tick                   ┆┆┆┆┆┆┆┆                                         ┆┆┆┆┆┆┆┆                  │
│Precip▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆▆█████████ │
│Hour                  111111112                                        111111118                  │
│Shift ··························································································· │
│                                                                                                  │
│Wind 4 m/s  P% max 35%  Cloud 51%                                                                 │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌7-Day Forecast────────────────────────────────────────────────────────────────────────────────────┐
│Day  Wx  Low   Range                              High  Pmm                                       │
│Thu  🌧   1°    ███████████████████··············· 8°     2.5                                      │
│Fri  🌧   1°    ·█████████████████████············ 9°     3.1                                      │
│Sat  🌧   2°    ··███████████████████████········· 10°    3.7                                      │
│Sun  🌧   2°    ··█████████████████████████······· 11°    4.3                                      │
│Mon  🌧   2°    ···███████████████████████████···· 12°    4.9                                      │
│Tue  🌧   3°    ····████████████████████████████·· 13°    5.5                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
r Refresh  v Hourly View  l Cities  s Settings  <-/-> Scroll  q Quit  Tab Focus(Hourly)  : Command
