tests/snapshots/render_snapshots__100x30_help_overlay.snap
---
source: tests/render_snapshots.rs
expression: "render_help_to_string(100, 30, 61)"
---
┌Current · L cities · S settings · ? help──────────────────────────────────────────────────────────┐
│7°C                                            │  Atmos Canvas · Rain                   ‹V›       │
│Slight r┌Help────────────────────────────────────────────────────────────────────────────┐C 🌧     │
│H:9°  L:│Start here                                                                      │╱       │
│Stockhol│1) Read top-left triad: now action, next change, confidence/freshness           │        │
│Now acti│2) Press Tab to focus Hourly or 7-Day for deeper context                        │        │
│Next cha│3) Use :city <name> or L to switch location quickly                             │▒░      │
│Next 6h:│                                                                                │▁▁▁▁    │
│● Confid│Switch city                                                                     │▃▃▃▃    │
│Wind 3/6│Press L, type city, Enter search                                                │████    │
│Pressure│Use 1..9 for recent locations                                                   │████    │
│Dew 2°  │When ambiguous results appear, choose 1..5                                      │        │
└────────│                                                                                │────────┘
┌▶ Hourly│Read risk fast                                                                  │────────┐
│Time   N│Hero shows: now action + next change + confidence                               │21:00   │
│Wx     🌧│Hourly table adds cursor detail and next 6h summary                             │🌧       │
│Temp   5│Alerts include severity and ETA context                                         │11°     │
│        │                                                                                │        │
└────────│Fix stale/offline                                                               │────────┘
┌7-Day Fo│Watch status badge: fresh / stale / offline                                     │────────┐
│Day  Wx │Press R to retry immediately                                                    │        │
│Thu  🌧  │Reliability lines show data age and retry timer                                 │        │
│Fri  🌧  │                                                                                │        │
│Sat  🌧  │Customize visuals                                                               │        │
│Sun  🌧  │Open settings with S for theme, icons, and hourly view                          │        │
│Mon  🌧  │Use V to cycle hourly views quickly                                             │        │
│Tue  🌧  │Type :theme <name> or :view <table|hybrid|chart>                                │        │
│Wed  🌧  └────────────────────────────────────────────────────────────────────────────────┘        │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
