tests/snapshots/render_snapshots__100x30_hybrid.snap
---
source: tests/render_snapshots.rs
expression: "render_with_hourly_mode_to_string(100, 30, 61, HourlyViewMode::Hybrid)"
---
┌Current · L cities · S settings · ? help──────────────────────────────────────────────────────────┐
│7°C                                            │  Atmos Canvas · Rain                   ‹V›       │
│Slight rain                                    │      .--.                                        │
│H:9°  L:3°                                     │   .-(____)-.                                     │
│Stockholm, Stockholm, Sweden                   │     / / / /                                      │
│Now action: keep precipitation gear ready      │                      RAIN                        │
│Next change in 8h: Temperature rises to 9°C    │                                                  │
│Next 6h: P 3.9mm · Pmax 35% · Gust 6 m/s · ΔT +│                                                  │
│● Confidence high · Data fresh · age -- · retry│  Now action: keep precipitation gear ready       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌▶ Hourly · Hybrid · Thu 12 Feb────────────────────────────────────────────────────────────────────┐
│Now action: keep precipitation gear ready  |  Next change in 8h: Temperature rises to 9°C  |  ●...│
│Temp  ▁▁▁▁▁▁▁▁▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▃▃▃▃▃▃▃▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▆▆▆▆▆▆▆▆▇▇▇▇▇▇▇▇▇▇▇▇▇▇█  5..11C │
│Precip▁▁▁▁▁▁▁▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▃▃▃▃▃▃▃▃▃▃▃▃▃▃▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▅▅▅▅▅▅▅▅▅▅▅▅▅▅  0.4..1.5mm/h │
│Time                 12                       ·                       18                        · │
│                                          [ Thu 12 Feb ]                                          │
│Morning                  Noon                     Evening                 Night                   │
│🌧 5-6°                   🌧 6-9°                   🌧 9-11°                 🌧 --                    │
│0.9mm 35%                5.1mm 35%                5.4mm 35%               0.0mm --                │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌7-Day Forecast────────────────────────────────────────────────────────────────────────────────────┐
│Day  Wx  Low   Range                              High  Pmm                                       │
│Thu  🌧   1°    ███████████████████··············· 8°     2.5                                      │
│Fri  🌧   1°    ·█████████████████████············ 9°     3.1                                      │
│Sat  🌧   2°    ··███████████████████████········· 10°    3.7                                      │
│Sun  🌧   2°    ··█████████████████████████······· 11°    4.3                                      │
│Mon  🌧   2°    ···███████████████████████████···· 12°    4.9                                      │
│Tue  🌧   3°    ····████████████████████████████·· 13°    5.5                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
R Refresh  V Hourly View  L Cities  S Settings  <-/-> Scroll  Q Quit  Tab Focus(Hourly)  : Command
