tests/snapshots/render_snapshots__120x40_chart.snap
---
source: tests/render_snapshots.rs
expression: "render_with_hourly_mode_to_string(120, 40, 61, HourlyViewMode::Chart)"
---
┌Current · L cities · S settings · ? help──────────────────────────────────────────────────────────────────────────────┐
│ 7°C                                                     │                                                            │
│ Slight rain                                             │  Atmos Canvas · Rain                             ‹V›       │
│ H:9°  L:3°                                              │      .--.                                                  │
│ Stockholm, Stockholm, Sweden                            │   .-(____)-.                                               │
│ Now action: keep precipitation gear ready               │     / / / /                                                │
│ Next change in 8h: Temperature rises to 9°C             │                           RAIN                             │
│ Next 6h: P 3.9mm · Pmax 35% · Gust 6 m/s · ΔT +3°C      │                                                            │
│ ● Confidence high · Data fresh · age -- · retry --      │                                                            │
│ Wind 3/6 m/s SW  Visibility 11.2km                      │                                                            │
│ Pressure 1008↗                                          │  Now action: keep precipitation gear ready                 │
│ Dew 2°  Humidity 73%                                    │                                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌▶ Hourly · Chart · Thu 12 Feb─────────────────────────────────────────────────────────────────────────────────────────┐
│Now action: keep precipitation gear ready  |  Next change in 8h: Temperature rises to 9°C  |  ● Data fresh · age --...│
│Temp  ▁▁▁▁▁▁▁▁▁▁▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▃▃▃▃▃▃▃▃▃▃▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▆▆▆▆▆▆▆▆▆▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇█  5..11C │
│Precip▁▁▁▁▁▁▁▁▁▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅  0.4..1.5mm/h │
│Time                     12                             ·                            18                             · │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│Wind 4 m/s  P% max 35%  Cloud 51%                                                                                     │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌7-Day Forecast────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Day   Wx   Low    Range                                             High   Pmm    Gst                                 │
│Thu   🌧    1°     ███████████████████████████·····················  8°      2.5     6                                 │
│Fri   🌧    1°     ·██████████████████████████████·················  9°      3.1     6                                 │
│Sat   🌧    2°     ··████████████████████████████████··············  10°     3.7     7                                 │
│Sun   🌧    2°     ···███████████████████████████████████··········  11°     4.3     7                                 │
│Mon   🌧    2°     ····██████████████████████████████████████······  12°     4.9     7                                 │
│Tue   🌧    3°     ······███████████████████████████████████████···  13°     5.5     8                                 │
│Wed   🌧    3°     ·······█████████████████████████████████████████  14°     6.1     8                                 │
│Highlights Precip peak Wed 6.1mm  Windiest Wed 8m/s  Comfort Thu                                                      │
│Plan Precip-heavy week: prioritize dry windows                                                                        │
│Totals P 30.1mm  Rain 24.5mm  Snow 0.0cm                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
R Refresh  V Hourly View  L Cities  S Settings  <-/-> Scroll  Q Quit  Tab Focus(Hourly)  : Command  F1/? Help
