tests/snapshots/render_snapshots__120x40_clear.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(120, 40, 0)"
---
┌Current · L cities · S settings · ? help──────────────────────────────────────────────────────────────────────────────┐
│ 7°C  Clear sky                                          │                                                            │
│ H:9°  L:3°  Stockholm, Stockholm, Sweden                │  Atmos Canvas · Clear sky                        ‹V›       │
│ Status Fresh                                            │                         ░                        7°C ☀     │
│ Last updated --:-- local · City TZ Europe/Stockholm     │                        ░░░                                 │
│ Feels 6°  Dew 2°            Pressure 1008hPa↗  Humidity │                       ░░◉░░                                │
│ Wind 3/6 m/s SW  Visibility Cloud 42% 16/29/41%  UV 2.0 │                        ░░░                                 │
│                             Sunrise 06:10  Sunset 17:40 │                         ░                             ░    │
│                                                         │          ░▒▒▒▒░                                     ░░▒    │
│ Temp   ▁▁▁▁▂▂▂▂▂▂▂▃▃▃▃▄▄▄▄▄▄▄▅▅▅▅▅▅▅▆▆▆▆▇▇▇▇▇▇▇███      │        ░░▒▓▓▓▒░            ░▒▒▒▒▒░                ▁▁▁▁▁    │
│ Press  ▁▁▁▁▂▂▂▂▂▂▂▃▃▃▃▄▄▄▄▄▄▄▅▅▅▅▅▅▅▆▆▆▆▇▇▇▇▇▇▇███      │  ░  ░  ░  ░  ░ ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▃▃▃▃▃    │
│ Gust   ▁▁▁▁▂▂▂▂▂▂▂▃▃▃▃▄▄▄▄▄▄▄▅▅▅▅▅▅▅▆▆▆▆▇▇▇▇▇▇▇███      │  ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▅▅▅▅▅    │
│ Precip ▁▁▁▁▂▂▂▂▂▂▂▃▃▃▃▄▄▄▄▄▄▄▅▅▅▅▅▅▅▆▆▆▆▇▇▇▇▇▇▇███      │  ▃▃▃▃▃▃▃▃▃▃▃▃▃▃████████████████████████████████████████    │
│ Cloud  ▁▁▁▁▂▂▂▂▂▂▂▃▃▃▃▄▄▄▄▄▄▄▅▅▅▅▅▅▅▆▆▆▆▇▇▇▇▇▇▇███      │  ██████████████████████████████████████████████████████    │
│ Vis km ████▇▇▇▇▇▇▇▆▆▆▆▅▅▅▅▅▅▅▄▄▄▄▄▄▄▃▃▃▃▂▂▂▂▂▂▂▁▁▁      │  ██████████████████████████████████████████████████████    │
│ 24h span 5°..11°  Δ6°                                   │  Precip clearing by 22:00 · 11mm expected                  │
│ Next precip now (0.4mm)                                 │                                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌▶ Hourly · Table · Thu 12 Feb─────────────────────────────────────────────────────────────────────────────────────────┐
│Time    Now      11:00     12:00    13:00    14:00    15:00     16:00    17:00    18:00    19:00     20:00    21:00   │
│Wx      ☾        ☾         ☾        ☾        ☾        ☾         ☀        ☀        ☀        ☀         ☀        ☀       │
│Temp    5°       6°        6°       7°       7°       8°        8°       9°       9°       10°       10°      11°     │
│P mm     0.4      0.5       0.6      0.7      0.8      0.9       1.0      1.1      1.2      1.3       1.4      1.5    │
│Gust      6        6         6        6        6        6         6        7        7        7         7        7     │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌7-Day Forecast────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Day   Wx   Low    Range                                             High   Pmm    Gst                                 │
│Thu   ☀    1°     ███████████████████████████·····················  8°      2.5     6                                 │
│Fri   ☀    1°     ·██████████████████████████████·················  9°      3.1     6                                 │
│Sat   ☀    2°     ··████████████████████████████████··············  10°     3.7     7                                 │
│Sun   ☀    2°     ···███████████████████████████████████··········  11°     4.3     7                                 │
│Mon   ☀    2°     ····██████████████████████████████████████······  12°     4.9     7                                 │
│Tue   ☀    3°     ······███████████████████████████████████████···  13°     5.5     8                                 │
│Wed   ☀    3°     ·······█████████████████████████████████████████  14°     6.1     8                                 │
│Highlights Precip peak Wed 6.1mm  Windiest Wed 8m/s  Comfort Thu                                                      │
│Plan Precip-heavy week: prioritize dry windows                                                                        │
│Totals P 30.1mm  Rain 24.5mm  Snow 0.0cm                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
R Refresh  V Hourly View  L Cities  S Settings  <-/-> Scroll  Q Quit  Tab Focus(Hourly)  : Command  F1/? Help
