tests/snapshots/render_snapshots__120x40_hybrid.snap
---
source: tests/render_snapshots.rs
expression: "render_with_hourly_mode_to_string(120, 40, 61, HourlyViewMode::Hybrid)"
---
┌Current · L cities · S settings · ? help──────────────────────────────────────────────────────────────────────────────┐
│ 7°C                                                     │                                                            │
│ Slight rain                                             │  Atmos Canvas · Rain                             ‹V›       │
│ H:9°  L:3°                                              │                         ░                        7°C 🌧     │
│ Stockholm, Stockholm, Sweden                            │  ╱    ╱    ╱    ╱    ╱ ░░░╱    ╱    ╱    ╱    ╱    ╱  ░    │
│ Now action: keep precipitation gear ready               │          ░▒▒▒▒░       ░░◉░░                         ░░▒    │
│ Next change in 8h: Temperature rises to 9°C             │        ░░▒▓▓▓▒░        ░░░ ░▒▒▒▒▒░                         │
│ Next 6h: P 3.9mm · Pmax 35% · Gust 6 m/s · ΔT +3°C      │  ░  ░  ░  ░  ░  ░  ░  ░ ░░░▒░▓▓░▒░░  ░  ░  ░ ▁▁▁▁▁▁▁▁▁▁    │
│ ● Confidence high · Data fresh · age -- · retry --      │  ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▃▃▃▃▃▃▃▃▃▃    │
│ Wind 3/6 m/s SW  Visibility 11.2km                      │  ▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃██████████    │
│ Pressure 1008↗                                          │  ██████████████████████████████████████████████████████    │
│ Dew 2°  Humidity 73%                                    │  Precip clearing by 22:00 · 11mm expected                  │
│ Precip chance 35%  AQI N/A                              │                                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌▶ Hourly · Hybrid · Thu 12 Feb────────────────────────────────────────────────────────────────────────────────────────┐
│Now action: keep precipitation gear ready  |  Next change in 8h: Temperature rises to 9°C  |  ● Data fresh · age --...│
│Temp  ▁▁▁▁▁▁▁▁▁▁▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▃▃▃▃▃▃▃▃▃▃▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▆▆▆▆▆▆▆▆▆▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇▇█  5..11C │
│Precip▁▁▁▁▁▁▁▁▁▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅▅  0.4..1.5mm/h │
│Time                     12                             ·                            18                             · │
│                                                    [ Thu 12 Feb ]                                                    │
│Morning                       Noon                          Evening                      Night                        │
│🌧 5-6°                        🌧 6-9°                        🌧 9-11°                      🌧 --                         │
│0.9mm 35%                     5.1mm 35%                     5.4mm 35%                    0.0mm --                     │
│9km                           9km                           9km                          --                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌7-Day Forecast────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Day   Wx   Low    Range                                             High   Pmm    Gst                                 │
│Thu   🌧    1°     ███████████████████████████·····················  8°      2.5     6                                 │
│Fri   🌧    1°     ·██████████████████████████████·················  9°      3.1     6                                 │
│Sat   🌧    2°     ··████████████████████████████████··············  10°     3.7     7                                 │
│Sun   🌧    2°     ···███████████████████████████████████··········  11°     4.3     7                                 │
│Mon   🌧    2°     ····██████████████████████████████████████······  12°     4.9     7                                 │
│Tue   🌧    3°     ······███████████████████████████████████████···  13°     5.5     8                                 │
│Wed   🌧    3°     ·······█████████████████████████████████████████  14°     6.1     8                                 │
│Highlights Precip peak Wed 6.1mm  Windiest Wed 8m/s  Comfort Thu                                                      │
│Plan Precip-heavy week: prioritize dry windows                                                                        │
│Totals P 30.1mm  Rain 24.5mm  Snow 0.0cm                                                                              │
│Avg daylight 09:19  Avg sun 04:16                                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
r Refresh  v Hourly View  l Cities  s Settings  <-/-> Scroll  q Quit  Tab Focus(Hourly)  : Command  F1/? Help
