tests/snapshots/render_snapshots__19x9_tiny_fallback.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(19, 9, 0)"
---
┌terminal weather─┐
│terminal-weather │
│ .--.   .--.     │
│ (tw)---(wx)     │
│ '--'   '--'     │
│                 │
│7° Clear sky     │
│Now action: keep │
└─────────────────┘
