tests/snapshots/render_snapshots__40x15_fog.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(40, 15, 45)"
---
┌Current · L cities · S settings · ? he┐
│7°C                                   │
│Fog                                   │
│H:9°  L:3°                            │
│Stockholm, Stockholm, Sweden          │
└──────────────────────────────────────┘
┌▶ Hourly · Table · Thu 12 Feb─────────┐
│Time  Now  11:00 12:0013:0014:00 15:00│
└──────────────────────────────────────┘
┌7-Day Forecast────────────────────────┐
│Day  Low   Range              High    │
│Thu  1°    ███████████······· 8°      │
│Fri  1°    ████████████······ 9°      │
└──────────────────────────────────────┘
R Refresh  Q Quit  F1/? Help
