tests/snapshots/render_snapshots__60x20_chart.snap
---
source: tests/render_snapshots.rs
expression: "render_with_hourly_mode_to_string(60, 20, 61, HourlyViewMode::Chart)"
---
┌Current · L cities · S settings · ? help──────────────────┐
│ 7°C                                                      │
│ Slight rain                                              │
│ H:9°  L:3°                                               │
│ Stockholm, Stockholm, Sweden                             │
│ Now action: keep precipitation gear ready                │
│ Next change in 8h: Temperature rises to 9°C              │
└──────────────────────────────────────────────────────────┘
┌▶ Hourly · Table · Thu 12 Feb─────────────────────────────┐
│Time  Now    11:00 12:00  13:00 14:00  15:00 16:00  17:00 │
│Wx    🌧      🌧     🌧      🌧     🌧      🌧     🌧      🌧     │
└──────────────────────────────────────────────────────────┘
┌7-Day Forecast────────────────────────────────────────────┐
│Day  Wx  Low   Range                    High              │
│Thu  🌧   1°    ██████████████·········· 8°                │
│Fri  🌧   1°    ·███████████████········ 9°                │
│Sat  🌧   2°    ·█████████████████······ 10°               │
│Sun  🌧   2°    ··█████████████████····· 11°               │
└──────────────────────────────────────────────────────────┘
r Refresh  v View  l Cities  s Settings  q Quit  : Command
