tests/snapshots/render_snapshots__80x24_chart.snap
---
source: tests/render_snapshots.rs
expression: "render_with_hourly_mode_to_string(80, 24, 61, HourlyViewMode::Chart)"
---
┌Current · L cities · S settings · ? help──────────────────────────────────────┐
│ 7°C                                                                          │
│ Slight rain                                                                  │
│ H:9°  L:3°                                                                   │
│ Stockholm, Stockholm, Sweden                                                 │
│ Now action: keep precipitation gear ready                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌▶ Hourly · Chart · Thu 12 Feb─────────────────────────────────────────────────┐
│keep precipitation gear ready  |  +8h: Temperature rises to 9°C  |  Fresh     │
│Time  Now   11:00 12:00 13:00 14:00 15:00 16:00 17:00 18:00 19:00 20:00 21:00 │
│Wx    🌧     🌧     🌧     🌧     🌧     🌧     🌧     🌧     🌧     🌧     🌧     🌧     │
│Temp  5°    6°    6°    7°    7°    8°    8°    9°    9°    10°   10°   11°   │
│P mm   0.4   0.5   0.6   0.7   0.8   0.9   1.0   1.1   1.2   1.3   1.4   1.5  │
│Gust    6     6     6     6     6     6     6     7     7     7     7     7   │
│Vis    10     9     9     9     9     9     9     9     9     9     9     9   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌7-Day Forecast────────────────────────────────────────────────────────────────┐
│Day  Wx  Low   Range                    High                                  │
│Thu  🌧   1°    ██████████████·········· 8°                                    │
│Fri  🌧   1°    ·███████████████········ 9°                                    │
│Sat  🌧   2°    ·█████████████████······ 10°                                   │
└──────────────────────────────────────────────────────────────────────────────┘
R Refresh  V View  L Cities  S Settings  <-/-> Scroll  Q Quit  : Command  F1/? H
